// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SidebarSection /> renders as expected for not selected section 1`] = `
<NavLink
  activeClassName="iap-management-sidebar__section--active"
  aria-current="page"
  className="iap-management-sidebar__section"
  exact={true}
  to="/management/section"
>
  <img
    alt="icon"
    className="iap-management-sidebar__section-icon"
    src="regularIcon"
  />
  <span>
    Section
  </span>
</NavLink>
`;

exports[`<SidebarSection /> renders as expected for selected section 1`] = `
<NavLink
  activeClassName="iap-management-sidebar__section--active"
  aria-current="page"
  className="iap-management-sidebar__section"
  exact={true}
  to="/management/section"
>
  <img
    alt="icon"
    className="iap-management-sidebar__section-icon"
    src="activeIcon"
  />
  <span>
    Section
  </span>
</NavLink>
`;
